[gd_scene load_steps=2 format=3 uid="uid://8f47mu4oij6j"]

[ext_resource type="Script" uid="uid://bjqocwsdwwy5x" path="res://scenes/ui/preview/terrain_preview.gd" id="1_rp85o"]

[node name="TerrainPreview" type="Control"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rp85o")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -16.0
offset_right = 76.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TerrainSprite" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="TerrainType" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Forest"

[node name="TerrainDefense" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+2 DEF"
